bug fixes after refactoring

--- a/research/model_exploration.ipynb
+++ b/research/model_exploration.ipynb
@@ -16,6 +16,7 @@
    "source": [
     "from utils import *\n",
     "from models import *\n",
+    "# from experiments import *\n",
     "from qd_data import *\n",
     "import keras\n",
     "import numpy as np\n",
@@ -47,65 +48,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from keras.applications.resnet50 import ResNet50\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "classfiles = glob(train_path+\"*.csv\")\n",
-    "nametoid = {v[:-4].split(\"/\")[-1].replace(\" \", \"_\") :i\n",
-    "               for i, v in enumerate(classfiles) if \"df_all_raw\" not in v} #adds underscores\n",
-    "idtoname = {i: v[:-4].split(\"/\")[-1].replace(\" \", \"_\")\n",
-    "               for i, v in enumerate(classfiles) if \"df_all_raw\" not in v} #adds underscores\n",
-    "\n",
-    "imsize=128  \n",
-    "batch_size=128"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "models = {\"resnet50_\":keras.applications.resnet50.ResNet50(input_shape=(imsize, imsize, 1), weights=None, classes=num_classes)},\n",
-    "{\"inception_resnet_v2_\":keras.applications.InceptionResNetV2(input_shape=(imsize, imsize, 1),  weights=None, classes=num_classes)}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'dict_items' object does not support indexing",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-25-5398c4811b0a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodels\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: 'dict_items' object does not support indexing"
-     ]
-    }
-   ],
-   "source": [
-    "models[0].items()[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "small_df = pd.read_csv(\"../data/small-set.csv\")\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1000, 3)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "small_df.shape"
    ]
   },
   {
